CSS fixes for link spacing

--- a/sfa.Tl.Marketing.Communication/Frontend/src/scss/mixins/_links.scss
+++ b/sfa.Tl.Marketing.Communication/Frontend/src/scss/mixins/_links.scss
@@ -5,7 +5,7 @@
     display: inline;
     padding-bottom: 2px;
     transition: 0.1s ease-in-out;
-    line-height: 28px;
+    line-height: 26px;
     cursor: pointer;
 
     &:hover, &:focus {
